--- a/src/view/CopyWindow.mxml
+++ b/src/view/CopyWindow.mxml
@@ -110,7 +110,7 @@
 							<s:Group height="100%" width="{CENTER_SPACE}">
 								<s:Button icon="@Embed(source='./assets/copy_icon.png')" 
 										  width="24" height="24" horizontalCenter="0" verticalCenter="0"  
-										  enabled="{CopyDataProxy.getInstance().boneCopyable}" 
+										  enabled="{CopyDataProxy.getInstance().behaviorCopyable}" 
 										  click="CopyDataProxy.getInstance().executeBehaviorCopy()"/>
 							</s:Group>
 							<s:Group width="100%" height="100%">
